--- a/BirthList/BirthList/Client/Pages/Index.razor
+++ b/BirthList/BirthList/Client/Pages/Index.razor
@@ -1,7 +1,144 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>¡Bienvenid@s!</h1>
 
-Welcome to your new app.
+Ésta es la página creada para gestionar la lista de nacimiento de Bebé1.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div class="row">
+    <div class="col-md-4">
+        <div class="well well-white mini-profile-widget">
+            <div class="image-container">
+                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="avatar img-responsive" alt="avatar">
+            </div>
+            <div class="details">
+                <h4>John Doe</h4>
+                <hr>
+                <div>Works at Bootdey.com</div>
+                <div>Attended University of Bootdey.com</div>
+                <div>Lives in Miami, Florida</div>
+                <div class="mg-top-10">32 Followers | 120 Following | 18 Posts</div>
+                <p class="mg-top-20">
+                    <a href="javascript:void(0);" class="btn btn-blue">
+                        <i class="fa fa-facebook fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-info">
+                        <i class="fa fa-twitter fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-red">
+                        <i class="fa fa-google-plus fa-fw"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="well well-light-orange mini-profile-widget">
+            <div class="image-container">
+                <img src="https://bootdey.com/img/Content/avatar/avatar6.png" class="avatar img-responsive" alt="avatar">
+            </div>
+            <div class="details">
+                <h4>John Doe</h4>
+                <hr>
+                <div>Works at Bootdey.com</div>
+                <div>Attended University of Bootdey.com</div>
+                <div>Lives in Miami, Florida</div>
+                <div class="mg-top-10">32 Followers | 120 Following | 18 Posts</div>
+                <p class="mg-top-20">
+                    <a href="javascript:void(0);" class="btn btn-blue">
+                        <i class="fa fa-facebook fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-info">
+                        <i class="fa fa-twitter fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-red">
+                        <i class="fa fa-google-plus fa-fw"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-md-4">
+        <div class="well well-light-pink mini-profile-widget">
+            <div class="image-container">
+                <img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="avatar img-responsive" alt="avatar">
+            </div>
+            <div class="details">
+                <h4>John Doe</h4>
+                <hr>
+                <div>Works at Bootdey.com</div>
+                <div>Attended University of Bootdey.com</div>
+                <div>Lives in Miami, Florida</div>
+                <div class="mg-top-10">32 Followers | 120 Following | 18 Posts</div>
+                <p class="mg-top-20">
+                    <a href="javascript:void(0);" class="btn btn-blue">
+                        <i class="fa fa-facebook fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-info">
+                        <i class="fa fa-twitter fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-red">
+                        <i class="fa fa-google-plus fa-fw"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-md-4">
+        <div class="well well-light-green mini-profile-widget">
+            <div class="image-container">
+                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="avatar img-responsive" alt="avatar">
+            </div>
+            <div class="details">
+                <h4>John Doe</h4>
+                <hr>
+                <div>Works at Bootdey.com</div>
+                <div>Attended University of Bootdey.com</div>
+                <div>Lives in Miami, Florida</div>
+                <div class="mg-top-10">32 Followers | 120 Following | 18 Posts</div>
+                <p class="mg-top-20">
+                    <a href="javascript:void(0);" class="btn btn-blue">
+                        <i class="fa fa-facebook fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-info">
+                        <i class="fa fa-twitter fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-red">
+                        <i class="fa fa-google-plus fa-fw"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="well well-light-blue mini-profile-widget">
+            <div class="image-container">
+                <img src="https://bootdey.com/img/Content/avatar/avatar4.png" class="avatar img-responsive" alt="avatar">
+            </div>
+            <div class="details">
+                <h4>John Doe</h4>
+                <hr>
+                <div>Works at Bootdey.com</div>
+                <div>Attended University of Bootdey.com</div>
+                <div>Lives in Miami, Florida</div>
+                <div class="mg-top-10">32 Followers | 120 Following | 18 Posts</div>
+                <p class="mg-top-20">
+                    <a href="javascript:void(0);" class="btn btn-blue">
+                        <i class="fa fa-facebook fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-info">
+                        <i class="fa fa-twitter fa-fw"></i>
+                    </a>
+                    <a href="javascript:void(0);" class="btn btn-red">
+                        <i class="fa fa-google-plus fa-fw"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
