--- a/BirthList/BirthList/Client/Pages/Inform.razor
+++ b/BirthList/BirthList/Client/Pages/Inform.razor
@@ -1,8 +1,8 @@
-﻿@page "/counter"
+﻿@page "/inform"
 
-<h1>Counter</h1>
+<h1>Informar compra</h1>
 
-<p>Current count: @currentCount</p>
+<p>Regalo: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
