--- a/BirthList/BirthList/Client/wwwroot/css/index.css
+++ b/BirthList/BirthList/Client/wwwroot/css/index.css
@@ -1,9 +1,4 @@
-﻿body {
-    margin-top: 20px;
-}
-
-
-/* Component: Well */
+﻿/* Component: Well */
 .well {
     overflow: hidden;
     border-radius: 0;
