--- a/BirthList/BirthList/Client/Shared/NavMenu.razor.css
+++ b/BirthList/BirthList/Client/Shared/NavMenu.razor.css
@@ -32,7 +32,8 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: black;
+        font-weight: bold;
         border-radius: 4px;
         height: 3rem;
         display: flex;
@@ -40,15 +41,17 @@
         line-height: 3rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
+        .nav-item ::deep a.active {
+            background-color: rgba(255,255,255,0.85);
+            color: black;
+            font-weight: bold;
+        }
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+        .nav-item ::deep a:hover {
+            background-color: rgba(255,255,255,0.5);
+            color: black;
+            font-weight: bold;
+        }
 
 @media (min-width: 641px) {
     .navbar-toggler {
