--- a/BirthList/BirthList/Client/Pages/PresentList.razor
+++ b/BirthList/BirthList/Client/Pages/PresentList.razor
@@ -26,7 +26,7 @@ else
                         <h4>@present.Title</h4>
                         <hr>
                         <div>@present.Description</div>
-                        <div>Precio orientativo: XXX €</div>
+                        <div>Precio orientativo: @present.EstimatedPrice €</div>
                         <div>Comprados @(present.RequiredAmount-present.RemainingAmount) de @present.RequiredAmount</div>
                         <div class="mg-top-10"><a target="_blank" href="@present.SampleLink">Link de compra</a></div>
                     </div>
