--- a/BirthList/BirthList/Client/Pages/EditElement.razor
+++ b/BirthList/BirthList/Client/Pages/EditElement.razor
@@ -15,7 +15,7 @@ else
     <img src="@present.ImageLink" class="avatar img-responsive" alt="@present.Title">
     <p>Nombre: @present.Title</p>
     <p>Description: @present.Description</p>
-    <p>Precio orientativo: XXX €</p>
+    <p>Precio orientativo: @present.EstimatedPrice €</p>
     <p>Comprados @(present.RequiredAmount - present.RemainingAmount) de @present.RequiredAmount</p>
     <p class="mg-top-10"><a target="_blank" href="@present.SampleLink">Link de compra</a></p>
 
