--- a/BirthList/BirthList/Client/Pages/Index.razor
+++ b/BirthList/BirthList/Client/Pages/Index.razor
@@ -4,9 +4,9 @@
 
 <h1>¡Bienvenid@s!</h1>
 
-Ésta es la página creada para gestionar la lista de nacimiento de Bebé1.
+<div class="intro-text">Ésta es la página creada para gestionar la lista de nacimiento de Bebé1.</div>
 <div class="main-content">
-    @if (presents == null)
+    @if (presents == null || !presents.Any())
     {
         <div class="loader center"></div>
     }
@@ -17,34 +17,33 @@
             {
                 if (present.RemainingAmount > 0)
                 {
-                    <a class="col-md-4" href="/present/@present.RowKey">
-                        <div class="well well-white mini-profile-widget">
+                    <a class="col-md-3 present" href="/present/@present.RowKey">
+                        <div class="well present-content mini-profile-widget">
                             <div class="image-container">
                                 <img src="@present.ImageLink" class="avatar img-responsive" alt="@present.Title">
                             </div>
                             <div class="details">
-                                <h4>@present.Title</h4>
-                                <hr>
-                                <div>@present.Description</div>
-                                <div>Precio orientativo: @present.EstimatedPrice €</div>
-                                <div>Comprados @(present.RequiredAmount-present.RemainingAmount) de @present.RequiredAmount</div>
-                                <div class="mg-top-10"><a target="_blank" href="@present.SampleLink">Link de compra</a></div>
+                                <div class="present-name">@present.Title</div>
+                                <div class="present-description">@present.Description</div>
+                                <div><span>Precio orientativo:</span> <span class="price">@present.EstimatedPrice €</span></div>
+                                <div><span>Comprados</span> @(present.RequiredAmount-present.RemainingAmount) <span>de</span> @present.RequiredAmount</div>
                             </div>
+                            <div class="info-link"><a href="/present/@present.RowKey"><span class="oi oi-info" aria-hidden="true"></span></a></div>
+                            <div class="present-link"><a target="_blank" href="@present.SampleLink"><span class="oi oi-cart" aria-hidden="true"></span>Comprar</a></div>
                         </div>
                     </a>
                 }
                 else
                 {
-                    <div class="col-md-4">
-                        <div class="well well-white mini-profile-widget">
+                    <div class="col-md-3 present">
+                        <div class="well present-content mini-profile-widget">
                             <div class="image-container">
                                 <img src="@present.ImageLink" class="avatar img-responsive" alt="@present.Title">
                             </div>
                             <div class="details">
-                                <h4>@present.Title</h4>
-                                <hr>
-                                <div>@present.Description</div>
-                                <div>Comprado!</div>
+                                <div class="present-name">@present.Title</div>
+                                <div class="present-description">@present.Description</div>
+                                <div class="present-bought">Comprado!</div>
                             </div>
                         </div>
                     </div>
@@ -56,11 +55,11 @@
 </div>
 
 @code {
-    private List<Present> presents;
+    private List<WishlistPresent> presents;
 
     protected override async Task OnInitializedAsync()
     {
-        presents = await Http.GetFromJsonAsync<List<Present>>("Present/List");
+        presents = await Http.GetFromJsonAsync<List<WishlistPresent>>("Present/List");
     }
 
 }
