--- a/BirthList/BirthList/Client/Pages/Index.razor.css
+++ b/BirthList/BirthList/Client/Pages/Index.razor.css
@@ -98,3 +98,120 @@
     #loader-wrapper .loader-section.section-right {
         right: 0;
     }
+
+
+/* PRESENTS STYLES */
+
+a.present {
+    font-weight: 300;
+    text-decoration: none;
+    font-size: 18px;
+    min-width: calc(33% - 5px);
+    margin: 5px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--light-black);
+    background-color: var(--misty-rose);
+    transition-duration: 0.3s;
+}
+
+div.present {
+    font-weight: 300;
+    text-decoration: none;
+    font-size: 18px;
+    min-width: calc(33% - 5px);
+    margin: 5px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--light-black);
+    background-color: var(--misty-rose);
+    transition-duration: 0.3s;
+}
+
+    a.present div.present-content, div.present div.present-content {
+        height: 100%;
+        width: 100%;
+        position: relative;
+        padding-bottom: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+        a.present div.present-content .details span, div.present div.present-content .details span {
+            font-weight: 600;
+        }
+
+            a.present div.present-content .details span.price, div.present div.present-content .details span.price {
+                font-weight: 800;
+                color: green;
+            }
+
+    a.present div.present-link, div.present div.present-link {
+        background-color: var(--peach-puff);
+        color: var(--light-black);
+        font-weight: bold;
+        font-size: 22px;
+        width: 28%;
+        min-width: 145px;
+        padding: 10px;
+        margin: 5px auto;
+        transition-duration: 0.3s;
+        position: absolute;
+        bottom: 0px;
+        left: 36%;
+        text-align: center;
+    }
+
+a.present div.info-link {
+    background-color: var(--peach-puff);
+    color: var(--light-black);
+    font-weight: bold;
+    font-size: 22px;
+    width: 10%;
+    min-width: 40px;
+    padding: 10px;
+    margin: 5px auto;
+    transition-duration: 0.3s;
+    position: absolute;
+    bottom: 0px;
+    left: 3px;
+    text-align: center;
+}
+
+    a.present div.present-link a, div.present div.present-link a, a.present div.info-link a {
+        text-decoration: none;
+    }
+
+    a.present div.present-link:hover, div.present div.present-link:hover, a.present div.info-link:hover {
+        background: var(--peach-crayola);
+        box-shadow: 0 0 8px rgb(0 0 0 / 60%);
+    }
+
+a.present div.present-name, div.present div.present-name {
+    font-size: 26px;
+    font-weight: 700;
+}
+
+a.present div.present-description, div.present div.present-description {
+    height: 85px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
+a.present:hover, div.present:hover {
+    box-shadow: 0 0 8px rgb(0 0 0 / 60%);
+}
+
+/* MEDIA QUERIES */
+@media all and (max-width: 640.98px) {
+    div.intro-text {
+        display: none;
+    }
+}
