--- a/BirthList/BirthList/Client/Pages/PresentList.razor
+++ b/BirthList/BirthList/Client/Pages/PresentList.razor
@@ -4,11 +4,11 @@
 @inject HttpClient Http
 
 <div>
-    <h1>Lista de Regalos</h1>
+    <h1>Lista de deseos:</h1>
     <div class="search right"><span>Buscar:</span><input @bind-value="SearchText" @bind-value:event="oninput" /></div>
 </div>
-<div>
-    <p>Aquí podrás ver la lista de regalos, con sus propiedades, y poder interactuar con ellos. </p>    
+<div class="intro-text">
+    <p>Aquí podrás ver la lista de regalos, con sus propiedades, y poder interactuar con ellos. </p>
 </div>
 <div class="main-content">
     @if (!presents.Any())
@@ -30,26 +30,26 @@
                             <div class="details">
                                 <div class="present-name">@present.Title</div>
                                 <div class="present-description">@present.Description</div>
-                                <div><span>Precio orientativo:</span> <span class="price">@present.EstimatedPrice €</span></div>
+                                <div class="estimated-price"><span>Precio orientativo:</span> <span class="price">@present.EstimatedPrice €</span></div>
                                 <div><span>Comprados</span> @(present.RequiredAmount-present.RemainingAmount) <span>de</span> @present.RequiredAmount</div>
                             </div>
+                            <div class="info-link"><a href="/present/@present.RowKey"><span class="oi oi-info" aria-hidden="true"></span></a></div>
                             <div class="present-link"><a target="_blank" href="@present.SampleLink"><span class="oi oi-cart" aria-hidden="true"></span>Comprar</a></div>
                         </div>
                     </a>
                 }
                 else
                 {
-                    <div class="col-md-3">
-                        <div class="well well-white mini-profile-widget">
+                    <div class="col-md-3 present">
+                        <div class="well present-content mini-profile-widget">
                             <div class="image-container">
                                 <img src="@present.ImageLink" class="avatar img-responsive" alt="@present.Title">
                             </div>
                             <div class="details">
-                                <h4>@present.Title</h4>
-                                <hr>
-                                <div>@present.Description</div>
-                                <div>Comprado!</div>
-                            </div>
+                                <div class="present-name">@present.Title</div>
+                                <div class="present-description">@present.Description</div>
+                                <div class="present-bought">Comprado!</div>
+                            </div>                            
                         </div>
                     </div>
                 }
@@ -60,7 +60,7 @@
 </div>
 
 @code {
-    private List<Present> presents = new List<Present>();
+    private List<WishlistPresent> presents = new List<WishlistPresent>();
 
     private string _pattern = @"[<>:/\\""|?* ]";
 
@@ -68,9 +68,9 @@
 
     protected override async Task OnInitializedAsync()
     {
-        presents = await Http.GetFromJsonAsync<List<Present>>("Present/List");
+        presents = await Http.GetFromJsonAsync<List<WishlistPresent>>("Present/List");
     }
 
-    List<Present> FilteredPresents => presents.Where(p => p.Title.ToLowerInvariant().Contains(SearchText.ToLowerInvariant()) || p.Description.Contains(SearchText.ToLowerInvariant())).ToList();
+    List<WishlistPresent> FilteredPresents => presents.Where(p => p.Title.ToLowerInvariant().Contains(SearchText.ToLowerInvariant()) || p.Description.Contains(SearchText.ToLowerInvariant())).ToList();
 
 }
