--- a/BirthList/BirthList/Client/wwwroot/css/index.css
+++ b/BirthList/BirthList/Client/wwwroot/css/index.css
@@ -77,10 +77,11 @@
 .content, .main-content {
     width: 100%;
     /*height: 100%;*/
+    padding-bottom: 10px;
 }
 
     .main-content .row {
-        max-height: 799px;
+        max-height: 779px;
         overflow: scroll;
         overflow-x: hidden;
     }
@@ -100,4 +101,12 @@
     right: 0px;
     width: 400px;
     padding: 10px;
+}
+
+span.oi {
+    margin-right: 5px;
+}
+
+button.navbar-toggler {
+    margin: -2px 10px 4px 10px;
 }
